--- a/ch4/src/main/res/values/strings.xml
+++ b/ch4/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Ch4</string>
+    <string name="big_txt">
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+        hello world hello world hello world hello world hello world
+    </string>
 </resources>
